# mcp-server-blender

./: .env.gui  .gitignore  config.toml  pyproject.toml
.github/workflows/: bump-parent.yml  test.yml
docs/guides/: animation.md  materials.md  modifiers.md  overview.md  scripting.md  workflow.md
src/mcp_server_blender/: __init__.py  blender_manager.py  bootstrap.py  core.py  server.py
src/mcp_server_blender/tools/: __init__.py  guide.py  materials.py  render.py  scene.py  scripting.py
tests/: conftest.py  test_blender_manager.py  test_core.py  test_tools_guide.py  test_tools_materials.py  test_tools_render.py  test_tools_scene.py  test_tools_scripting.py
